--- a/behavior_trends_analysis.ipynb
+++ b/behavior_trends_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "c78443b5-d1f3-420b-ac40-94f74f450396",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
+   "id": "f868c2a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: openpyxl in c:\\users\\dhils\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (3.1.5)"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 24.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Requirement already satisfied: et-xmlfile in c:\\users\\dhils\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from openpyxl) (2.0.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install openpyxl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "a3b0895a-111b-464d-a4e7-99a4682691a9",
    "metadata": {},
    "outputs": [],
@@ -22,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "24faf5d2-4b42-445b-8441-28220eb2bb26",
    "metadata": {},
    "outputs": [
@@ -133,7 +168,7 @@
        "4 2010-12-01 08:26:00       3.39     17850.0  United Kingdom  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "acae8ba6-2ac9-4e93-828a-ea5007785b53",
    "metadata": {},
    "outputs": [
@@ -264,7 +299,7 @@
        "4 2010-12-01 08:26:00       3.39     17850.0  United Kingdom  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "6815eecb-a3c7-4633-afed-54aedb27d254",
    "metadata": {},
    "outputs": [],
@@ -304,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "9e59a2d9-6d4f-4cf2-8ee3-f72149029b2a",
    "metadata": {},
    "outputs": [
@@ -321,13 +356,451 @@
     "print(len(filtered_data))\n",
     "print(len(data))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63c776de",
+   "metadata": {},
+   "source": [
+    "#### 3. **loyalty_customers(df: pd.DataFrame, min_purchases: int) -> pd.DataFrame**\n",
+    "   - **Description**: Identify loyal customers based on a minimum purchase threshold.\n",
+    "   - **Parameters**:\n",
+    "     - `df`: The cleaned DataFrame.\n",
+    "     - `min_purchases`: Minimum number of purchases required to qualify as a loyal customer.\n",
+    "   - **Returns**: A DataFrame listing customers who have made at least `min_purchases` transactions, including the count of their purchases."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "50e0b862",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>PurchaseCount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12347.0</td>\n",
+       "      <td>182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12348.0</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12349.0</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12350.0</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>12352.0</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4367</th>\n",
+       "      <td>18280.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4368</th>\n",
+       "      <td>18281.0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4369</th>\n",
+       "      <td>18282.0</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4370</th>\n",
+       "      <td>18283.0</td>\n",
+       "      <td>756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4371</th>\n",
+       "      <td>18287.0</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4126 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      CustomerID  PurchaseCount\n",
+       "1        12347.0            182\n",
+       "2        12348.0             31\n",
+       "3        12349.0             73\n",
+       "4        12350.0             17\n",
+       "5        12352.0             95\n",
+       "...          ...            ...\n",
+       "4367     18280.0             10\n",
+       "4368     18281.0              7\n",
+       "4369     18282.0             13\n",
+       "4370     18283.0            756\n",
+       "4371     18287.0             70\n",
+       "\n",
+       "[4126 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "purchase_counts = data.groupby(\"CustomerID\").size().reset_index(name=\"PurchaseCount\")\n",
+    "\n",
+    "min_purchases = 5 \n",
+    "\n",
+    "loyal_customers = purchase_counts[purchase_counts[\"PurchaseCount\"] >= min_purchases]\n",
+    "\n",
+    "loyal_customers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b417b644",
+   "metadata": {},
+   "source": [
+    "# 4. quarterly_revenue(df: pd.DataFrame) -> pd.DataFrame\n",
+    "\n",
+    "   - **Description**: Calculate the total revenue per quarter.\n",
+    "   - **Parameters**:\n",
+    "     - `df`: The cleaned DataFrame.\n",
+    "   - **Returns**: A DataFrame with two columns: `quarter` and `total_revenue`, representing the total revenue generated in each quarter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c01756e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  quarter  total_revenue\n",
+      "0  2010Q4     572713.890\n",
+      "1  2011Q1    1612083.150\n",
+      "2  2011Q2    1809008.611\n",
+      "3  2011Q3    2198273.293\n",
+      "4  2011Q4    2719328.960\n"
+     ]
+    }
+   ],
+   "source": [
+    "filtered_data.loc[:, 'InvoiceDate'] = pd.to_datetime(filtered_data['InvoiceDate'])\n",
+    "\n",
+    "filtered_data.loc[:, 'Revenue'] = filtered_data['Quantity'] * filtered_data['UnitPrice']\n",
+    "\n",
+    "filtered_data.loc[:, 'quarter'] = filtered_data['InvoiceDate'].dt.to_period('Q')\n",
+    "\n",
+    "quarterly_revenue_data = filtered_data.groupby('quarter')['Revenue'].sum().reset_index()\n",
+    "\n",
+    "quarterly_revenue_data.columns = ['quarter', 'total_revenue']\n",
+    "\n",
+    "\n",
+    "print(quarterly_revenue_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86113878",
+   "metadata": {},
+   "source": [
+    "# 5. high_demand_products(df: pd.DataFrame, top_n: int) -> pd.DataFrame\n",
+    "   - **Description**: Identify the `top_n` products with the highest total quantity sold across all transactions.\n",
+    "   - **Parameters**:\n",
+    "     - `df`: The cleaned DataFrame.\n",
+    "     - `top_n`: Number of top products to return.\n",
+    "   - **Returns**: A DataFrame listing the `top_n` most demanded products based on total quantity sold."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6ae776d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                             Description  Quantity\n",
+      "2319         PAPER CRAFT , LITTLE BIRDIE     80995\n",
+      "1992      MEDIUM CERAMIC TOP STORAGE JAR     77916\n",
+      "3786   WORLD WAR 2 GLIDERS ASSTD DESIGNS     54415\n",
+      "1762             JUMBO BAG RED RETROSPOT     46181\n",
+      "3698  WHITE HANGING HEART T-LIGHT HOLDER     36725\n",
+      "216        ASSORTED COLOUR BIRD ORNAMENT     35362\n",
+      "2269     PACK OF 72 RETROSPOT CAKE CASES     33693\n",
+      "2600                      POPCORN HOLDER     30931\n",
+      "2656                  RABBIT NIGHT LIGHT     27202\n",
+      "2047             MINI PAINT SET VINTAGE      26076\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_n = 10\n",
+    "\n",
+    "product_sales = filtered_data.groupby('Description')['Quantity'].sum().reset_index()\n",
+    "\n",
+    "\n",
+    "product_sales_sorted = product_sales.sort_values(by='Quantity', ascending=False)\n",
+    "\n",
+    "top_products = product_sales_sorted.iloc[:top_n]\n",
+    "\n",
+    "\n",
+    "print(top_products)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74b25f3c",
+   "metadata": {},
+   "source": [
+    "# 6. purchase_patterns(df: pd.DataFrame) -> pd.DataFrame\n",
+    "   - **Description**: Create a summary showing the average quantity and average unit price for each product.\n",
+    "   - **Parameters**:\n",
+    "     - `df`: The cleaned DataFrame.\n",
+    "   - **Returns**: A DataFrame with three columns: `product`, `avg_quantity`, and `avg_unit_price`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "045ce726",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product</th>\n",
+       "      <th>avg_quantity</th>\n",
+       "      <th>avg_unit_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4 PURPLE FLOCK DINNER CANDLES</td>\n",
+       "      <td>3.589744</td>\n",
+       "      <td>2.324359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50'S CHRISTMAS GIFT BAG LARGE</td>\n",
+       "      <td>17.293578</td>\n",
+       "      <td>1.248073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DOLLY GIRL BEAKER</td>\n",
+       "      <td>17.376812</td>\n",
+       "      <td>1.243841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>I LOVE LONDON MINI BACKPACK</td>\n",
+       "      <td>5.142857</td>\n",
+       "      <td>4.138571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>I LOVE LONDON MINI RUCKSACK</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.150000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3872</th>\n",
+       "      <td>ZINC T-LIGHT HOLDER STARS SMALL</td>\n",
+       "      <td>20.563025</td>\n",
+       "      <td>0.836975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3873</th>\n",
+       "      <td>ZINC TOP  2 DOOR WOODEN SHELF</td>\n",
+       "      <td>1.111111</td>\n",
+       "      <td>16.950000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3874</th>\n",
+       "      <td>ZINC WILLIE WINKIE  CANDLE STICK</td>\n",
+       "      <td>13.578125</td>\n",
+       "      <td>0.872344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3875</th>\n",
+       "      <td>ZINC WIRE KITCHEN ORGANISER</td>\n",
+       "      <td>2.083333</td>\n",
+       "      <td>7.175000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3876</th>\n",
+       "      <td>ZINC WIRE SWEETHEART LETTER TRAY</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.454000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3877 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               product  avg_quantity  avg_unit_price\n",
+       "0        4 PURPLE FLOCK DINNER CANDLES      3.589744        2.324359\n",
+       "1        50'S CHRISTMAS GIFT BAG LARGE     17.293578        1.248073\n",
+       "2                    DOLLY GIRL BEAKER     17.376812        1.243841\n",
+       "3          I LOVE LONDON MINI BACKPACK      5.142857        4.138571\n",
+       "4          I LOVE LONDON MINI RUCKSACK      1.000000        4.150000\n",
+       "...                                ...           ...             ...\n",
+       "3872   ZINC T-LIGHT HOLDER STARS SMALL     20.563025        0.836975\n",
+       "3873    ZINC TOP  2 DOOR WOODEN SHELF       1.111111       16.950000\n",
+       "3874  ZINC WILLIE WINKIE  CANDLE STICK     13.578125        0.872344\n",
+       "3875       ZINC WIRE KITCHEN ORGANISER      2.083333        7.175000\n",
+       "3876  ZINC WIRE SWEETHEART LETTER TRAY      4.000000        3.454000\n",
+       "\n",
+       "[3877 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary = filtered_data.groupby('Description').agg(\n",
+    "    avg_quantity=('Quantity', 'mean'),\n",
+    "    avg_unit_price=('UnitPrice', 'mean')\n",
+    ").reset_index()\n",
+    "\n",
+    "\n",
+    "summary.columns = ['product', 'avg_quantity', 'avg_unit_price']\n",
+    "\n",
+    "summary\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d334c3c",
+   "metadata": {},
+   "source": [
+    "# Conceptual Questions (Multiple Choice)\n",
+    "**def answer_conceptual_questions() -> dict:**\n",
+    "   - **Description**: Implement a function named `answer_conceptual_questions` that returns a dictionary with your answers to the multiple-choice questions.\n",
+    "   - **Output**: The function should return a dictionary where each key is a question number (e.g., \"Q1\", \"Q2\") and each value is a set of answer choices (e.g., `{\"A\"}`, `{\"A\", \"C\"}`, etc.)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e91bcb7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Q1': {'A'}, 'Q2': {'B'}, 'Q3': {'C'}, 'Q4': {'A', 'B', 'C'}, 'Q5': {'A'}}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q1 = {\"A\"}  \n",
+    "Q2 = {\"B\"}  \n",
+    "Q3 = {\"C\"} \n",
+    "Q4 = {\"A\", \"B\", \"C\"} \n",
+    "Q5 = {\"A\"}  \n",
+    "answers = {\n",
+    "    \"Q1\": Q1,\n",
+    "    \"Q2\": Q2,\n",
+    "    \"Q3\": Q3,\n",
+    "    \"Q4\": Q4,\n",
+    "    \"Q5\": Q5\n",
+    "}\n",
+    "\n",
+    "answers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a72c93b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ds-env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ds-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -339,7 +812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
